--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,19 @@
+
 {
     "name": "laravel/laravel",
     "type": "project",
     "require": {
-        "php": "^8.0 || ^8.1",
+        "php": "^8.1",
+        "fideloper/proxy": "^4.0",
+        "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^10.0",
         "laravel/tinker": "^2.0"
+    },
+    "autoload": {
+        "psr-4": {
+            "App\\": "app/"
+        }
     },
     "scripts": {
         "post-autoload-dump": [
@@ -18,6 +26,6 @@
         "preferred-install": "dist",
         "sort-packages": true
     },
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
     "prefer-stable": true
 }
